# DeeDee

./: .gitignore  README.md  app.py  obtainNGROKAddrUpdateWebhook.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_app.py  test_bot.py  tox.ini
.github/workflows/: main-commit-pr.yml  python-app.yml
bot/: bot.py  test_bot.py
