[tool.poetry]
name = "civop-cpoc-bot"
version = "0.1.0"
description = ""
authors = ["sambyers"]

[tool.poetry.dependencies]
python = "^3.10"
webexteamssdk = "^1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
