[tool.poetry]
name = "civop-cpoc-bot"
version = "0.1.0"
description = ""
authors = ["sambyers", "yasgari"]

[tool.poetry.dependencies]
python = "^3.10"
webexteamssdk = "^1.6"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
tox = "^3.24.5"
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py310

[gh-actions]
python =
    3.10: py310

[testenv]
whitelist_externals = poetry
commands =
    poetry install -v
    poetry run black .
    poetry run flake8 --max-line-length 88
    poetry run pytest
"""